--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.52.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.0",
+    "sonner": "^1.5.0",
     "swiper": "^11.1.4"
   },
   "devDependencies": {
