[added] login and create page added with functionality

--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
 VITE_REACT_APP_image_upload_api_key=7ccf1dffa7ff553325766ad3847970b1
+
+VITE_REACT_APP_apiKey= AIzaSyBWBU4mG-rATrtrKNyRhLdIxD6lmYUm4zI
+VITE_REACT_APP_authDomain= m360-7e650.firebaseapp.com
+VITE_REACT_APP_projectId= m360-7e650
+VITE_REACT_APP_storageBucket= m360-7e650.appspot.com
+VITE_REACT_APP_messagingSenderId= 708676244058
+VITE_REACT_APP_appId= 1=708676244058=web=930720d7005a37cf63be63
+VITE_REACT_APP_measurementId= G-EQWMVPV5FC
